    * fixed plots not refreshing when the TS button is clicked.
    * fixed missing parameters for computation of calibration in sensors reading.

  * ADDED:
    * new log messages have been added.
    * a new weather icon has been added.
    * a new window has been added to ask the user if he wants to retry a new connexion to internet in case of no
    connexion detection.

  * MODIFIED:
    * database has been modified to allow NULL data.
    * update process is now working as it should and has been frozen.
    * the display of T, P, H, min and max has been improved. If data are too old, they are not displayed.
    * internet connection is tested before sending MF and GH requests.


### September 20 2021, Release version 0.6.0 ###

  * MODIFIED:
    * the project has been pushed on GitHub (private)

  * ADDED:
    * a first version of a thread to check version online has been added.
    * first versions of all functions to handle update processes.
    * functions have been added to handle errors in threads.
    * weather warning from Meteo France has been added.


### September 17 2021, Release version 0.5.0 ###

  * ADDED:
    * a new keyboard window has been added.
    * new options for the place and altitude have been added.
    * a new icon for weather has been added.
    * a function to create shadows has been introduced.
    * a new icon and function has been added to display weather warning message.
    * a new thread to clean the database has been introduced.
    * a touch scroller has been added in the aboutlog window.
    * the 1h forecast section has been divided into 2 pages for a better readability.
    * a window to exit the GUI, reboot and stop the computer has been added.

  * MODIFIED:
    * the option window can now handle the modification of the place by the user.
    * if the place has been changed and forecast sections are displayed, the forecast is updated and the GUI as well.